--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,20 @@ body{
   right:0px;
 }
 
+#lastMod{
+  border-top: 1px solid #000;
+  padding-top: 10px;
+  margin-top: 20px;
+  font-size: 12px;
+}
+
+#lastMod h5{
+  margin: 0;
+  padding: 0;
+  display: block;
+  font-size: 12px;
+}
+
 #help{
   width: 25px;
   height: 25px;
